# victor-research

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: publish.yml  test.yml
tests/: test_research_capabilities.py  test_research_handlers.py  test_research_workflows.py  test_safety.py
tests/contract/: test_contract_boundary_contract.py  test_plugin_contract.py  test_sdk_boundary_contract.py
victor_research/: __init__.py  assistant.py  capabilities.py  conversation_enhanced.py  escape_hatches.py  handlers.py  mode_config.py  plugin.py  prompts.py  protocols.py  safety.py  safety_enhanced.py  tool_dependencies.py  tool_dependencies.yaml  victor-vertical.toml
victor_research/rl/: __init__.py
victor_research/teams/: __init__.py  personas.py
victor_research/workflows/: __init__.py  competitive_analysis.yaml  deep_research.yaml  fact_check.yaml  literature_review.yaml
