[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "victor-research"
version = "0.5.7"
description = "Research vertical for Victor AI - Web research, information gathering, and knowledge synthesis"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Vijaykumar Singh", email = "singhvjd@gmail.com" },
]
maintainers = [
    { name = "Vijaykumar Singh", email = "singhvjd@gmail.com" },
]
keywords = [
    "victor",
    "vertical",
    "research",
    "web-search",
    "information-gathering",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "victor-ai>=0.5.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "black==26.1.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/vjsingh1984/victor-research"
Repository = "https://github.com/vjsingh1984/victor-research"
Documentation = "https://docs.victor.dev/verticals/research"
Issues = "https://github.com/vjsingh1984/victor-research/issues"

[project.entry-points."victor.verticals"]
research = "victor_research.assistant:ResearchAssistant"

[project.entry-points."victor.tool_dependencies"]
research = "victor_research.tool_dependencies:get_provider"

[project.entry-points."victor.safety_rules"]
research = "victor_research.safety:create_all_research_safety_rules"

[tool.setuptools]
packages = [
    "victor_research",
    "victor_research.rl",
    "victor_research.teams",
    "victor_research.workflows",
]

[tool.black]
line-length = 100
target-version = [
    "py310",
    "py311",
    "py312",
]

[tool.ruff]
line-length = 100
select = [
    "E",
    "W",
    "F",
    "B",
    "C4",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
